--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">AndroidCheckOutSDK</string>
+    <string-array name="environment_options">
+        <item>test</item>
+        <item>sandbox</item>
+        <item>prod</item>
+    </string-array>
 </resources>
