Quick pay option added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string-array name="environment_options">
         <item>test</item>
         <item>sandbox</item>
+        <item>prod</item>
     </string-array>
 </resources>
