recommended instrumentation related changes are done

--- a/Sdk/src/main/res/values/strings.xml
+++ b/Sdk/src/main/res/values/strings.xml
@@ -266,5 +266,6 @@
     <dimen name="heightOfRecyclerViewIndp">160dp</dimen>
     <color name="colorStart">#F1F1F1</color>
     <color name="colorEnd">#FAF9F9</color>
+    <color name="recomendedItemtext">#1D1C20</color>
     <color name="tooltip_bg">#000000</color>
 </resources>
