--- a/Sdk/src/main/res/values/strings.xml
+++ b/Sdk/src/main/res/values/strings.xml
@@ -261,6 +261,7 @@
     <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/bottom_sheet_bg</item>
     </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
 
